--- a/EmployeeService/Web.config
+++ b/EmployeeService/Web.config
@@ -65,5 +65,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="Emploee" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Test;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Test" connectionString="Data Source=(local);initial catalog=Test;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
   </connectionStrings>
 </configuration>
